# 0.00.16 (61097) Feb 8, 2012
# 0.00.15 (61094) Feb 8, 2012
2/8/12 Texturing on all surfaces, significant model changes, and transform animation
# 0.00.14 (60935) Feb 1, 2012
Added texturing to cross sections
# 0.00.13 (60651) Jan 26, 2012
Changed the angle and position of the camera in the Crust tab when handling zoom
# 0.00.12 (60562) Jan 24, 2012
Density fixes for above-ground levels (water / air) for Crust tab
More consistent title fonts
Added in Legend with tentative positioning and styling
Changed the temperature false-color to range from gray to red
Better color handling (light/dark) for labels in the Crust tab
Full hemisphere of earth shown on Crust tab when zoomed out
Hid FPS readout by default, added developer option to enable it
Consolidated the time control readout, so now the inner visibility is toggled
# 0.00.10 (59979) Jan 6, 2012
Added "Temperature / Density" views on 1st tab
# 0.00.09 (59977) Jan 6, 2012
Can now only drag plates by their handles. Handle top matches mouse position as well as possible
Don't show handle on plate if it is a lighter plate
Handle rotation based on movement
Changed handle to stick-and-ball style
Reduced ruler size in toolbox for more visibility
Added manual mode time readout
Ruler drags from the top
Bugfix for 2nd tab dragging of tools that doesn't trigger the manual mode motion
# 0.00.08 (59921) Jan 5, 2012
Added majority of UI for controlling the 2nd tab (manual and auto mode).
Now allows mode changes after animation has started
Added simplified handle prototypes
Added temporary (inaccurate) "divergent" boundary animation (reverse of convergent)
Added extra continental crust piece for 2nd tab
Updated 2nd tab view location to a slight side-angle
Fixed reset "freeze" bug
Flipped ruler tick mark labels vertically, added a 4x multiplier to the ruler on the 2nd tab
# 0.00.07 (59864) Jan 3, 2012
1/3/12 Added UI for 2nd tab "Auto" mode with clock, added inaccurate example "convergence" model
# 0.00.06 (59809) Jan 2, 2012