@@ -1,3 +1,6 @@
+Added "Rewind" button to the plate motion tab
+Increased the "texture" contrast
+Added approximate continental collision model, crust/terrain changes to accommodate.
 # 0.00.16 (61097) Feb 8, 2012
 # 0.00.15 (61094) Feb 8, 2012
 2/8/12 Texturing on all surfaces, significant model changes, and transform animation
